--- a/public/includes/header.html
+++ b/public/includes/header.html
@@ -1,8 +1,10 @@
 <header>
     <div class="header-container">
         <div class="logo-section">
-            <img src="/logo.png" alt="Arc Raiders Hub Logo" class="logo-img">
-            <h1 class="site-title">Arc Raiders Hub</h1>
+            <a href="/index.html" class="logo-link">
+                <img src="/logo.png" alt="Arc Raiders Hub Logo" class="logo-img">
+                <h1 class="site-title">Arc Raiders Hub</h1>
+            </a>
         </div>
         <nav>
             <ul>
