--- a/public/includes/header.html
+++ b/public/includes/header.html
@@ -19,5 +19,7 @@
             </ul>
         </nav>
     </div>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5237121565666763"
+     crossorigin="anonymous"></script>
 </header>
 
